# vng

./: vng.pro  vng.pro.user.bc7877f  vng.pro.user.eaa0404
sdk/: Makefile  sdk.pro
sdk/src/: CMakeLists.txt  sdkdefs.h
sdk/src/ble/: blecommand.cpp  blecommand.h  bledefs.h
sdk/src/ble/gap/: blegapcommand.cpp  blegapcommand.h  blegapevent.h  blegappacket.cpp  blegappacket.h  blegapsubscribe.cpp  blegapsubscribe.h
sdk/src/comm/: commmessage.cpp  commmessage.h
sdk/src/comm/ble/: commbleadvertise.cpp  commbleadvertise.h  commblecommand.cpp  commblecommand.h  commblereceive.cpp  commblereceive.h
sdk/src/comm/coap/: netcoapendpoint.cpp  netcoapendpoint.h
sdk/src/core/: coreapplication.cpp  coreapplication.h  corecallback.h  corecommand.h  coreexecute.cpp  coreexecute.h  corelock.cpp  corelock.h  coresemaphore.cpp  coresemaphore.h  coresynchronize.cpp  coresynchronize.h  coreutils.cpp  coreutils.h  corevariant.cpp  corevariant.h
sdk/src/devices/: devicesdevice.cpp  devicesdevice.h  devicesprotocol.cpp  devicesprotocol.h
sdk/src/net/: netaddress.cpp  netaddress.h  netapplication.cpp  netapplication.h  netchannel.cpp  netchannel.h  netsubscribe.cpp  netsubscribe.h
sdk/src/net/coap/: netcoapendpoint.cpp  netcoapendpoint.h
sdk/src/net/coap/libcoap/: Makefile  Makefile.in  aclocal.m4  coap_config.h  config.status  configure  libcoap-1.la  libcoap.pro  libtool
sdk/src/net/coap/libcoap/.libs/: libcoap-1.lai
sdk/src/net/coap/libcoap/doc/: Makefile  Makefile.in
sdk/src/net/coap/libcoap/examples/: Makefile  Makefile.in  client.c  coap-client.txt
sdk/src/net/coap/libcoap/include/coap/: hashkey.h
sdk/src/net/coap/libcoap/src/: coap_io.c  net.c  option.c  pdu.c  resource.c
sdk/src/net/coap/libcoap/tests/: Makefile
sdk/src/net/mosquitto/: netmosquittochannel.cpp  netmosquittochannel.h
sdk/src/net/paho/: netpahochannel.cpp  netpahochannel.h
sdk/src/std/: stdhash.h  stdlist.h
sdk/src/utils/: utilscrc16.cpp  utilscrc16.h  utilsprint.h
services/: services.pro
services/access/: access.pro
services/access/keypad/: Makefile  keypad.pro
services/access/keypad/src/: CMakeLists.txt  application.cpp  main.cpp
services/access/keypad/src/files/etc/init.d/services/access/: keypad.init
services/access/keypad/src/files/etc/vng/services/access/: keypad.json
services/access/reader/: Makefile  reader.pro
services/access/reader/src/: CMakeLists.txt  application.cpp  main.cpp
services/access/reader/src/cloud/: cloudmqttclient.cpp  cloudmqttclient.h  iotcloud.cpp  iotcloud.h
services/access/reader/src/files/etc/init.d/services/access/: reader.init
services/access/reader/src/files/etc/vng/services/access/: reader.json
services/ble/: ble.pro
services/ble/advertise/: Makefile  advertise.pro
services/ble/advertise/src/: CMakeLists.txt  application.cpp  main.cpp
services/ble/advertise/src/files/etc/init.d/services/ble/: advertise.init
services/ble/advertise/src/files/etc/vng/services/ble/: advertise.json
services/ble/scan/: Makefile  scan.pro
services/ble/scan/src/: CMakeLists.txt  application.cpp  main.cpp
services/ble/scan/src/files/etc/init.d/services/ble/: scan.init
services/ble/scan/src/files/etc/vng/services/ble/: scan.json
services/cloud/: cloud.pro
services/cloud/processor/: Makefile  processor.pro
services/cloud/processor/src/: CMakeLists.txt  application.cpp  main.cpp
services/cloud/processor/src/cloud/: addressconvertutils.cpp  addressconvertutils.h  cloudprocesscommand.cpp  cloudprocesscommand.h  controlldeviceadvertise.h  iotcloud.cpp  iotcloud.h
services/cloud/processor/src/files/etc/init.d/services/cloud/: processor.init
services/cloud/processor/src/files/etc/vng/services/cloud/: processor.json
services/light/: light.pro
services/light/button/: Makefile  button.pro
services/light/button/src/: CMakeLists.txt  application.cpp  application.h  main.cpp
services/light/button/src/files/etc/init.d/services/light/: button.init
services/light/button/src/files/etc/vng/services/light/: button.json
services/light/sensor/: Makefile  sensor.pro
services/light/sensor/src/: CMakeLists.txt  application.cpp  application.h  cloudclient.h  httpclient.cpp  httpclient.h  main.cpp  upload.h  zcloudclient.cpp  zcloudclient.h  zclouddef.h  zclouddevice.h
services/light/sensor/src/files/etc/init.d/services/light/: sensor.init
services/light/sensor/src/files/etc/vng/services/light/: sensor.json
services/light/zcoap/: Makefile  zcoap.pro
services/light/zcoap/src/: CMakeLists.txt  application.cpp  application.h  main.cpp  timerfd.h  zmqtt.cpp  zmqtt.h
services/light/zcoap/src/cantcoap/: nethelper.cpp  nethelper.h
services/light/zcoap/src/files/etc/init.d/services/light/: zcoap.init
services/light/zcoap/src/files/etc/vng/services/light/: zcoap.json
