#*******************************************************************************
#  Copyright (c) 2016 VNG Corp. iot lab
# 
#  Contributors:
#     Trung Bui Quang(trungbq#@vng.com.vn) - initial version
#*******************************************************************************/

# Note: on OS X you should install XCode and the associated command-line tools
SET(PROJECT_NAME "vng.iot.services.access.keypad")
PROJECT("${PROJECT_NAME}" CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

## build settings
SET(VNGIOTSERVICESACCESSKEYPAD_VERSION_MAJOR 1)
SET(VNGIOTSERVICESACCESSKEYPAD_VERSION_MINOR 0)
SET(VNGIOTSERVICESACCESSKEYPAD_VERSION_PATCH 0)
SET(VNGIOTSERVICESACCESSKEYPAD_VERSION ${VNGIOTSERVICESACCESSKEYPAD_VERSION_MAJOR}.${VNGIOTSERVICESACCESSKEYPAD_VERSION_MINOR}.${VNGIOTSERVICESACCESSKEYPAD_VERSION_PATCH})

EXECUTE_PROCESS(COMMAND date -u OUTPUT_VARIABLE BUILD_TIMESTAMP)
STRING(STRIP ${BUILD_TIMESTAMP} BUILD_TIMESTAMP)

## build options
SET(VNGIOTSERVICESACCESSKEYPAD_WITH_SSL FALSE CACHE BOOL "Flag that defines whether to build ssl-enabled binaries too. ")
SET(VNGIOTSERVICESACCESSKEYPAD_BUILD_DOCUMENTATION FALSE CACHE BOOL "Create and install the HTML based API documentation (requires Doxygen)")
SET(VNGIOTSERVICESACCESSKEYPAD_BUILD_SAMPLES FALSE CACHE BOOL "Build sample programs")

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_definitions(-DUSE_EPOLL -DUSE_LIBJSONC -DWITH_POSIX -DDEBUG_PRINT)
add_executable("${PROJECT_NAME}"
               application.cpp
               main.cpp)
SET_TARGET_PROPERTIES("${PROJECT_NAME}" PROPERTIES COMPILE_FLAGS "-I$ENV{STAGING_DIR}/usr/include/vng/iot/sdk")
TARGET_LINK_LIBRARIES("${PROJECT_NAME}" vng.iot.sdk)
SET(CPACK_PACKAGE_VERSION_MAJOR ${VNGIOTSERVICESACCESSKEYPAD_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${VNGIOTSERVICESACCESSKEYPAD_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${VNGIOTSERVICESACCESSKEYPAD_VERSION_PATCH})
SET_TARGET_PROPERTIES("${PROJECT_NAME}"
	PROPERTIES
        VERSION ${VNGIOTSERVICESACCESSKEYPAD_VERSION}
        SOVERSION ${VNGIOTSERVICESACCESSKEYPAD_VERSION_MAJOR})
    
INSTALL(TARGETS "${PROJECT_NAME}"
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib)

INCLUDE(CPack)
